--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */
+/*! HTML5 Boilerplate v5.2.0 | MIT License | https://html5boilerplate.com/ */
 
 /*
  * What follows is the result of much research on cross-browser styling.
@@ -95,17 +95,62 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/*Large Background Image*/
+html {
+    background: url(../img/foto.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+   /* set height to 100% - these are important for allowing content to vertically align */
+   height:100%;
+}
+body {
+    /* set height to 100% - these are important for allowing content to vertically align */
+    height:100%;
+}
+.wrapper {
+    /* set the display to flex and use the justify-content & align-items properties to center all child elements on the page */
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+    margin: 0;
+    height: 70%;
+    width: 100%;
+}
+
+#yo {
+  display:flex;
+  justify-content:center;
+  align-items: center;
+
+  font-family: 'Sacramento', cursive;
+  font-size: 2em;
+  width: 100%;
+
+}
+
+#content {
+   /* set the display to flex and use the justify-content & align-items properties to center the text within the div*/
+   display:flex;
+   justify-content:center;
+   align-items: center;
 
 
-
-
-
-
-
-
-
-
-
+    background: #222;
+    background:rgba(0,0,0,0.7);
+    color: #fff;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 300;
+    font-size: 1.25em;
+    line-height: 1.5em;
+    border-radius: 10px;
+    padding: 0px 30px;
+    width: 300px;
+    height: 300px;
+}
+#content p span {font-family: 'Lora', sans-serif;}
 
 
 
@@ -116,7 +161,7 @@ textarea {
    ========================================================================== */
 
 /*
- * Hide visually and from screen readers
+ * Hide visually and from screen readers:
  */
 
 .hidden {
@@ -211,9 +256,7 @@ textarea {
 @media print {
     *,
     *:before,
-    *:after,
-    *:first-letter,
-    *:first-line {
+    *:after {
         background: transparent !important;
         color: #000 !important; /* Black prints faster:
                                    http://www.sanbeiji.com/archives/953 */
